# mcup

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  build.sh  index.html  mcup.bat  mcup.sh  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  commitlint.yml  docs.yml  python-app.yml
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
commands/: index.html
commands/about/: index.html
commands/server/: index.html
commands/template/: index.html
commands/update/: index.html
commands/userconfig/: index.html
configs/: __init__.py  server_properties_config.py
debian/: changelog  control  copyright  files  install  rules
docs/: CNAME  index.md
docs/about/: changelog.md  contributing.md  license.md
docs/commands/: about.md  index.md  server.md  template.md  update.md  userconfig.md
docs/getting-started/: creating-first-server.md  installation.md  next-steps.md
getting-started/creating-first-server/: index.html
getting-started/installation/: index.html
getting-started/next-steps/: index.html
mcup/: __init__.py  __main__.py  mcup.py
mcup/cli/: __init__.py  mcup_cli.py
mcup/cli/commands/: __init__.py  about.py  config.py  help.py  server.py  template.py  update.py
mcup/cli/language/: language.py
mcup/commands/: __init__.py  server.py  template.py  update.py
mcup/config_assemblers/: __init__.py  assembler.py  assembler_linker.py  assembler_linker_config.py  server_properties_assembler.py  yml_assembler.py
mcup/configs/: __init__.py  bukkit_config.py  config_file.py  paper_config.py  server_properties_config.py  spigot_config.py
mcup/core/config_assemblers/: __init__.py  assembler.py  assembler_linker.py  assembler_linker_config.py  bash_start_script_assembler.py  batch_start_script_assembler.py  docker_assembler.py  docker_compose_assembler.py  eula_assembler.py  java_flags_builder.py  script_template_manager.py  server_properties_assembler.py  start_script_assembler.py  yml_assembler.py
mcup/core/configs/: __init__.py  bash_start_script.py  batch_start_script.py  bukkit_config.py  config_file.py  docker_compose_file.py  docker_file.py  eula_file.py  paper_config.py  paper_global_config.py  (+4 more)
mcup/handlers/: __init__.py  server_handler.py
mcup/server/: __init__.py  server_manager.py
mcup/template/: template.py  template_manager.py
mcup/utils/: __init__.py  locker_updater.py
packaging/windows/: installer.iss
rpm/: mcup.spec
search/: search_index.json
snap/: snapcraft.yaml  snapcraft.yml
src/: mcup.py
src/commands/: help.py  template.py  update.py
tests/: run_tests.py
(+96 files in other folders)
