[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcup"
version = "1.0.0-beta1"
description = "Command-line tool for quickly creating Minecraft servers"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kacper Jarosławski"}]
dependencies = [
    "requests==2.32.3",
    "rich==14.0.0",
    "pyyaml==6.0.2"
]
requires-python = ">=3.8"

[tool.hatch.build]
exclude = [
  "build.sh",
]
