[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcup"
version = "1.0.0-beta7"
description = "Command-line tool for quickly creating Minecraft servers"
readme = "README.md"
license = "MIT"
authors = [{ name = "Kacper Jarosławski", email = "kacper.jaroslawski@kzl21.ovh" }]
dependencies = [
    "requests>=2.32.4",
    "rich>=14.1.0",
    "pyyaml>=6.0.2"
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["minecraft", "server", "cli", "manager", "automation"]

[project.urls]
Homepage = "https://mcup.kzl21.ovh"
Documentation = "https://mcup.kzl21.ovh"
Repository = "https://github.com/kacper-jar/mcup"
Issues = "https://github.com/kacper-jar/mcup/issues"

[project.scripts]
mcup = "mcup.__main__:main"

[tool.hatch.build]
exclude = [
    "build.sh",
    "commitlint.config.js"
]